--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,202 +1,3 @@
 .container {
-  .services_bar {
-    height: 60px;
-  }
-
-  .header_container_one {
-    height: 15vh;
-
-    width: 100%;
-
-    background-image: url(/images/container-bg-one.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: left top;
-
-    position: relative;
-  }
-
-  .header_container_two {
-    position: relative;
-
-    width: 100%;
-    min-height: calc(72vh - 60px);
-    height: 100%;
-
-    background-image: url(/images/container-bg-two.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-
-    overflow: hidden;
-
-    .consulta_veiculo_card {
-      position: absolute;
-
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-
-      max-width: 500px;
-      height: auto;
-
-      .cv_card_items {
-        display: flex;
-        flex-direction: row;
-
-        color: #fff;
-        background-color: #08103f;
-
-        padding: 4px 8px;
-        border-radius: 0 0 16px 16px;
-
-        box-shadow: 0px 0px 6px 4px rgba(0, 0, 0, 0.2);
-
-        .cv_card_item {
-          display: grid;
-          align-items: center;
-          // grid-template-rows: 120px 1fr 90px;
-          grid-template-rows: 1fr 60px 90px;
-
-          align-items: center;
-          justify-items: center;
-
-          > a {
-            padding: 4px 16px;
-
-            border: 3px solid #fff;
-            border-radius: 16px;
-
-            // font-family: "PantonBlackCaps";
-            font-family: "Poppins";
-            font-weight: 700;
-            font-size: 24px;
-            color: #fff;
-
-            text-transform: uppercase;
-            text-decoration: none;
-
-            text-align: center;
-          }
-        }
-      }
-
-      button {
-        font-size: 32px;
-
-        padding: 24px 4px;
-
-        width: 522px;
-
-        border: none;
-        border-radius: 16px;
-
-        font-family: "Poppins";
-        font-weight: 700;
-      }
-
-      > button {
-        position: relative;
-
-        color: #08103f;
-        /* background-color: #ffca01; */
-
-        background: linear-gradient(120deg, #ffd853 35%, #ffca01 36%, #ffca01);
-
-        box-shadow: 0px 0px 6px 4px rgba(0, 0, 0, 0.1);
-        cursor: default;
-      }
-    }
-  }
-
-  .header_container_three {
-    position: relative;
-
-    width: 100%;
-    height: 13vh;
-
-    background-image: url(/images/container-bg-three.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: left top;
-
-    align-items: center;
-    justify-content: center;
-
-    .header_dividers {
-      top: -4px;
-
-      display: flex;
-      align-items: baseline !important;
-    }
-  }
-
-  .main_header {
-    display: block;
-
-    > div {
-      display: flex;
-      margin: auto;
-    }
-
-    .header_dividers {
-      position: absolute;
-
-      bottom: 0;
-
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      width: 100%;
-
-      .dividers_bottom {
-        position: relative;
-
-        span {
-          top: 0;
-          left: 0;
-
-          display: flex;
-          align-items: baseline;
-          height: 8px !important;
-        }
-      }
-
-      span {
-        height: 4px;
-      }
-
-      span:nth-child(1) {
-        width: 15%;
-        height: 4px;
-
-        background-color: #023e84;
-      }
-
-      span:nth-child(2) {
-        width: 35%;
-
-        background-color: #00adef;
-      }
-
-      span:nth-child(3) {
-        width: 40%;
-
-        background-color: #023e84;
-      }
-
-      span:nth-child(4) {
-        width: 10%;
-
-        background-color: #fff;
-      }
-
-      &.dividers_top {
-        span {
-          height: 6px !important;
-        }
-      }
-    }
-  }
+  //
 }
