--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,6 +5,9 @@ body {
   font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
     Droid Sans, Helvetica Neue, sans-serif;
 }
+body {
+  width: calc(100vw - (100vw - 100%));
+}
 
 a {
   color: inherit;
@@ -24,9 +27,9 @@ a {
 }
 
 @font-face {
-  font-family: "Rede Rounded F31";
+  font-family: "RedeRoundedF31";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local("Rede Rounded"), url(/fonts/Rede\ Rounded\ F31.ttf) format("ttf");
+  src: local("RedeRoundedF31"), url(/fonts/RedeRoundedF31.ttf) format("ttf");
 }
