--- a/src/components/Hero/styles.module.scss
+++ b/src/components/Hero/styles.module.scss
@@ -15,7 +15,7 @@
   position: relative;
 
   width: 100%;
-  min-height: calc(70vh - 60px);
+  min-height: 70vh;
   height: 100%;
 
   background-image: url(/images/container-bg-two.png);
@@ -80,7 +80,7 @@
     button {
       font-size: 32px;
 
-      padding: 24px 4px;
+      padding: 28px 4px;
 
       width: 522px;
 
