created fixed scrolled menu in services bar

--- a/src/components/ServicesBar/styles.module.scss
+++ b/src/components/ServicesBar/styles.module.scss
@@ -1,3 +1,10 @@
 .services_bar {
   height: 60px;
+
+  transform: translateY(-100px);
+  transition: all 0.2s ease-in;
+}
+
+.scrolled {
+  transform: translateY(0);
 }
