--- a/src/components/ServicesBar/styles.module.scss
+++ b/src/components/ServicesBar/styles.module.scss
@@ -2,7 +2,7 @@
   height: 60px;
 
   transform: translateY(-100px);
-  transition: all 0.2s ease-in;
+  transition: all 0.3s ease;
 }
 
 .scrolled {
